# autodock

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_Halo  Dockerfile_OscarDeploy  README.md
autodock-kabam-artifacts/: Dockerfile  Dockerfile_OscarDeploy  README.md  package.xml  start_oscar_dock.sh
autodock-kabam-artifacts/configs/: autodock_config.yaml  vacuum40.yaml
autodock-kabam-artifacts/launch/: autodock.launch  autodock_with_tf.launch  oscar.launch  static_tf.launch  undock.launch  vacuum40.launch
autodock-kabam-artifacts/rviz/: oscar.rviz  vacuum40.rviz
autodock-kabam-artifacts/scripts/: undock_node.py
autodock_core/scripts/: simple_autodock.py
autodock_core/scripts/autodock_core/: autodock_server.py
configs/: autodock_config.yaml  oscar.yaml
launch/: autodock.launch  halo.launch  oscar.launch
scripts/: camera_info_filter.py  undock_node.py  undocking_node.py
